--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2794,6 +2794,475 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "house_properties = ['bathrooms', 'bedrooms', 'beds', 'room_type', 'accommodates', 'bed_type','property_type','neighbourhood_group_cleansed']\n",
+    "host_policies = ['guests_included','minimum_nights', 'maximum_nights','cancellation_policy','require_guest_phone_verification','require_guest_profile_picture','host_has_profile_pic', 'host_identity_verified']\n",
+    "pricing_strategies = ['price','cleaning_fee','extra_people']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>beds</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>accommodates</th>\n",
+       "      <th>bed_type</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>neighbourhood_group_cleansed</th>\n",
+       "      <th>guests_included</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>maximum_nights</th>\n",
+       "      <th>cancellation_policy</th>\n",
+       "      <th>require_guest_phone_verification</th>\n",
+       "      <th>require_guest_profile_picture</th>\n",
+       "      <th>host_has_profile_pic</th>\n",
+       "      <th>host_identity_verified</th>\n",
+       "      <th>price</th>\n",
+       "      <th>cleaning_fee</th>\n",
+       "      <th>extra_people</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>241032</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>365</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$85.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>953595</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>strict</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$150.00</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>$0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3308979</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>House</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>strict</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$975.00</td>\n",
+       "      <td>$300.00</td>\n",
+       "      <td>$25.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7421966</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>flexible</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$100.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>278830</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>House</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>strict</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$450.00</td>\n",
+       "      <td>$125.00</td>\n",
+       "      <td>$15.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  bathrooms  bedrooms  beds        room_type  accommodates  \\\n",
+       "0   241032        1.0       1.0   1.0  Entire home/apt             4   \n",
+       "1   953595        1.0       1.0   1.0  Entire home/apt             4   \n",
+       "2  3308979        4.5       5.0   7.0  Entire home/apt            11   \n",
+       "3  7421966        1.0       0.0   2.0  Entire home/apt             3   \n",
+       "4   278830        2.0       3.0   3.0  Entire home/apt             6   \n",
+       "\n",
+       "   bed_type property_type neighbourhood_group_cleansed  guests_included  \\\n",
+       "0  Real Bed     Apartment                   Queen Anne                2   \n",
+       "1  Real Bed     Apartment                   Queen Anne                1   \n",
+       "2  Real Bed         House                   Queen Anne               10   \n",
+       "3  Real Bed     Apartment                   Queen Anne                1   \n",
+       "4  Real Bed         House                   Queen Anne                6   \n",
+       "\n",
+       "   minimum_nights  maximum_nights cancellation_policy  \\\n",
+       "0               1             365            moderate   \n",
+       "1               2              90              strict   \n",
+       "2               4              30              strict   \n",
+       "3               1            1125            flexible   \n",
+       "4               1            1125              strict   \n",
+       "\n",
+       "  require_guest_phone_verification require_guest_profile_picture  \\\n",
+       "0                                f                             f   \n",
+       "1                                t                             t   \n",
+       "2                                f                             f   \n",
+       "3                                f                             f   \n",
+       "4                                f                             f   \n",
+       "\n",
+       "  host_has_profile_pic host_identity_verified    price cleaning_fee  \\\n",
+       "0                    t                      t   $85.00          NaN   \n",
+       "1                    t                      t  $150.00       $40.00   \n",
+       "2                    t                      t  $975.00      $300.00   \n",
+       "3                    t                      t  $100.00          NaN   \n",
+       "4                    t                      t  $450.00      $125.00   \n",
+       "\n",
+       "  extra_people  \n",
+       "0        $5.00  \n",
+       "1        $0.00  \n",
+       "2       $25.00  \n",
+       "3        $0.00  \n",
+       "4       $15.00  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "useful_cols = ['id'] + house_properties + host_policies + pricing_strategies \n",
+    "listings_df = listings_df[useful_cols]\n",
+    "listings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>beds</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>accommodates</th>\n",
+       "      <th>bed_type</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>neighbourhood_group_cleansed</th>\n",
+       "      <th>guests_included</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>maximum_nights</th>\n",
+       "      <th>cancellation_policy</th>\n",
+       "      <th>require_guest_phone_verification</th>\n",
+       "      <th>require_guest_profile_picture</th>\n",
+       "      <th>host_has_profile_pic</th>\n",
+       "      <th>host_identity_verified</th>\n",
+       "      <th>price</th>\n",
+       "      <th>cleaning_fee</th>\n",
+       "      <th>extra_people</th>\n",
+       "      <th>booking_rate(%)</th>\n",
+       "      <th>daily_revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>241032</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>365</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$85.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$5.00</td>\n",
+       "      <td>94.794521</td>\n",
+       "      <td>80.575342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>953595</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>strict</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$150.00</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>79.726027</td>\n",
+       "      <td>136.276712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3308979</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>House</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>strict</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$975.00</td>\n",
+       "      <td>$300.00</td>\n",
+       "      <td>$25.00</td>\n",
+       "      <td>60.273973</td>\n",
+       "      <td>784.657534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7421966</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>flexible</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$100.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>39.178082</td>\n",
+       "      <td>39.178082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>278830</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>House</td>\n",
+       "      <td>Queen Anne</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>strict</td>\n",
+       "      <td>f</td>\n",
+       "      <td>f</td>\n",
+       "      <td>t</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$450.00</td>\n",
+       "      <td>$125.00</td>\n",
+       "      <td>$15.00</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>462.739726</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  bathrooms  bedrooms  beds        room_type  accommodates  \\\n",
+       "0   241032        1.0       1.0   1.0  Entire home/apt             4   \n",
+       "1   953595        1.0       1.0   1.0  Entire home/apt             4   \n",
+       "2  3308979        4.5       5.0   7.0  Entire home/apt            11   \n",
+       "3  7421966        1.0       0.0   2.0  Entire home/apt             3   \n",
+       "4   278830        2.0       3.0   3.0  Entire home/apt             6   \n",
+       "\n",
+       "   bed_type property_type neighbourhood_group_cleansed  guests_included  \\\n",
+       "0  Real Bed     Apartment                   Queen Anne                2   \n",
+       "1  Real Bed     Apartment                   Queen Anne                1   \n",
+       "2  Real Bed         House                   Queen Anne               10   \n",
+       "3  Real Bed     Apartment                   Queen Anne                1   \n",
+       "4  Real Bed         House                   Queen Anne                6   \n",
+       "\n",
+       "   minimum_nights  maximum_nights cancellation_policy  \\\n",
+       "0               1             365            moderate   \n",
+       "1               2              90              strict   \n",
+       "2               4              30              strict   \n",
+       "3               1            1125            flexible   \n",
+       "4               1            1125              strict   \n",
+       "\n",
+       "  require_guest_phone_verification require_guest_profile_picture  \\\n",
+       "0                                f                             f   \n",
+       "1                                t                             t   \n",
+       "2                                f                             f   \n",
+       "3                                f                             f   \n",
+       "4                                f                             f   \n",
+       "\n",
+       "  host_has_profile_pic host_identity_verified    price cleaning_fee  \\\n",
+       "0                    t                      t   $85.00          NaN   \n",
+       "1                    t                      t  $150.00       $40.00   \n",
+       "2                    t                      t  $975.00      $300.00   \n",
+       "3                    t                      t  $100.00          NaN   \n",
+       "4                    t                      t  $450.00      $125.00   \n",
+       "\n",
+       "  extra_people  booking_rate(%)  daily_revenue  \n",
+       "0        $5.00        94.794521      80.575342  \n",
+       "1        $0.00        79.726027     136.276712  \n",
+       "2       $25.00        60.273973     784.657534  \n",
+       "3        $0.00        39.178082      39.178082  \n",
+       "4       $15.00       100.000000     462.739726  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge with calendar data\n",
+    "listings_df = pd.merge(listings_df, overview, how='left', left_on='id', right_on='listing_id')\n",
+    "listings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
