print NUll Values

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3028,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3072,8 +3072,12 @@
        "      <th>price</th>\n",
        "      <th>cleaning_fee</th>\n",
        "      <th>extra_people</th>\n",
-       "      <th>booking_rate(%)</th>\n",
-       "      <th>daily_revenue</th>\n",
+       "      <th>booking_rate(%)_x</th>\n",
+       "      <th>daily_revenue_x</th>\n",
+       "      <th>booking_rate(%)_y</th>\n",
+       "      <th>daily_revenue_y</th>\n",
+       "      <th>price_avg</th>\n",
+       "      <th>price_std</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3101,6 +3105,10 @@
        "      <td>$5.00</td>\n",
        "      <td>94.794521</td>\n",
        "      <td>80.575342</td>\n",
+       "      <td>94.794521</td>\n",
+       "      <td>80.575342</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3126,6 +3134,10 @@
        "      <td>$0.00</td>\n",
        "      <td>79.726027</td>\n",
        "      <td>136.276712</td>\n",
+       "      <td>79.726027</td>\n",
+       "      <td>136.276712</td>\n",
+       "      <td>170.931271</td>\n",
+       "      <td>37.225252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3151,6 +3163,10 @@
        "      <td>$25.00</td>\n",
        "      <td>60.273973</td>\n",
        "      <td>784.657534</td>\n",
+       "      <td>60.273973</td>\n",
+       "      <td>784.657534</td>\n",
+       "      <td>1301.818182</td>\n",
+       "      <td>356.322687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -3176,6 +3192,10 @@
        "      <td>$0.00</td>\n",
        "      <td>39.178082</td>\n",
        "      <td>39.178082</td>\n",
+       "      <td>39.178082</td>\n",
+       "      <td>39.178082</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3201,6 +3221,10 @@
        "      <td>$15.00</td>\n",
        "      <td>100.000000</td>\n",
        "      <td>462.739726</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>462.739726</td>\n",
+       "      <td>462.739726</td>\n",
+       "      <td>23.703194</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3242,15 +3266,22 @@
        "3                    t                      t  $100.00          NaN   \n",
        "4                    t                      t  $450.00      $125.00   \n",
        "\n",
-       "  extra_people  booking_rate(%)  daily_revenue  \n",
-       "0        $5.00        94.794521      80.575342  \n",
-       "1        $0.00        79.726027     136.276712  \n",
-       "2       $25.00        60.273973     784.657534  \n",
-       "3        $0.00        39.178082      39.178082  \n",
-       "4       $15.00       100.000000     462.739726  "
+       "  extra_people  booking_rate(%)_x  daily_revenue_x  booking_rate(%)_y  \\\n",
+       "0        $5.00          94.794521        80.575342          94.794521   \n",
+       "1        $0.00          79.726027       136.276712          79.726027   \n",
+       "2       $25.00          60.273973       784.657534          60.273973   \n",
+       "3        $0.00          39.178082        39.178082          39.178082   \n",
+       "4       $15.00         100.000000       462.739726         100.000000   \n",
+       "\n",
+       "   daily_revenue_y    price_avg   price_std  \n",
+       "0        80.575342    85.000000    0.000000  \n",
+       "1       136.276712   170.931271   37.225252  \n",
+       "2       784.657534  1301.818182  356.322687  \n",
+       "3        39.178082   100.000000    0.000000  \n",
+       "4       462.739726   462.739726   23.703194  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3258,7 +3289,50 @@
    "source": [
     "# Merge with calendar data\n",
     "listings_df = pd.merge(listings_df, overview, how='left', left_on='id', right_on='listing_id')\n",
+    "listings_df = pd.merge(listings_df, calendar_booked, how='left', left_on='id', right_on='listing_id')\n",
+    "listings_df = listings_df.drop(['listing_id'], axis=1)\n",
+    "listings_df['price_per_person'] = listings_df['price']/listings_df['accommodates']\n",
     "listings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['price',\n",
+       " 'cleaning_fee',\n",
+       " 'extra_people',\n",
+       " 'price_avg',\n",
+       " 'price_std',\n",
+       " 'price_per_person']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pricing_strategies = pricing_strategies + ['price_avg','price_std', 'price_per_person']\n",
+    "pricing_strategies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to check if any values are null.\n",
+    "def print_null(df):\n",
+    "    for col in df:\n",
+    "        if df[col].isnull().any():\n",
+    "            print('%s has %.0f null values: %.3f%%'%(col, df[col].isnull().sum(), df[col].isnull().sum()/df[col].count()*100))\n",
+    "            "
    ]
   },
   {
